Adding readme and increasing matrix options

--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -16,7 +16,16 @@ jobs:
     strategy:
       matrix:
         docker_tag: [v1.0, v1.1, v1.2.0, latest]
-        flags: [DUMMY_LIBC_INIT=1, DUMMY_TIMEZONE=1, DEFAULT=1]
+        flags: [
+          DUMMY_LIBC_INIT=1, 
+          DUMMY_TIMEZONE=1, 
+          KERNEL_NOPATCH=1, 
+          NEWLIB_NANO=1, 
+          KERNEL_NOPATCH=1 NEWLIB_NANO=1,
+          KERNEL_NOPATCH=1 NEWLIB_NANO=1 DUMMY_LIBC_INIT=1,
+          KERNEL_NOPATCH=1 NEWLIB_NANO=1 DUMMY_TIMEZONE=1,  
+          DEFAULT=1
+          ]
 
     container: ps2dev/ps2dev:${{ matrix.docker_tag }}
     steps:
