--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -13,21 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        docker_tag: [v1.0, v1.1, v1.2.0, latest]
-        flags: [
-          DUMMY_LIBC_INIT=1, 
-          DUMMY_TIMEZONE=1, 
-          KERNEL_NOPATCH=1, 
-          NEWLIB_NANO=1, 
-          KERNEL_NOPATCH=1 NEWLIB_NANO=1,
-          KERNEL_NOPATCH=1 NEWLIB_NANO=1 DUMMY_LIBC_INIT=1,
-          KERNEL_NOPATCH=1 NEWLIB_NANO=1 DUMMY_TIMEZONE=1,  
-          DEFAULT=1
-          ]
-
-    container: ps2dev/ps2dev:${{ matrix.docker_tag }}
+    container: fjtrujy/ps2sdk-ports:latest
     steps:
     - uses: actions/checkout@v2
 
@@ -38,7 +24,7 @@ jobs:
 
     - name: Compile project
       run: |
-        make clean all ${{ matrix.flags }}
+        make clean all
 
     - name: Get short SHA
       id: slug
@@ -48,5 +34,5 @@ jobs:
       if: ${{ success() }}
       uses: actions/upload-artifact@v2
       with:
-        name: hello-${{ steps.slug.outputs.sha8 }}-${{matrix.docker_tag}}-${{ matrix.flags }}
-        path: hello.elf
+        name: hello
+        path: test.elf
