Remove dependencies not needed

--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apk add build-base git bash
+        apk add build-base
     
 
     - name: Compile project
