--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -26,7 +26,16 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apk add build-base
+        apk add build-base git bash
+    
+    - name: Recompile ps2sdk
+      run: |
+        git clone https://github.com/ps2dev/ps2sdk.git
+        cd ps2sdk
+        git checkout 08181ea0b2054605626f78e29e1efc24973a54fd
+        make -j $(getconf _NPROCESSORS_ONLN) clean
+        make -j $(getconf _NPROCESSORS_ONLN)
+        make -j $(getconf _NPROCESSORS_ONLN) install
     
     - name: Compile project
       run: |
