--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         docker_tag: [latest]
         flags: [
-          DEFAULT=1
+          DEBUG=1
           ]
 
     container: ps2dev/ps2dev:${{ matrix.docker_tag }}
@@ -30,9 +30,9 @@ jobs:
     
     - name: Recompile ps2sdk
       run: |
-        git clone https://github.com/ps2dev/ps2sdk.git
+        git clone https://github.com/fjtrujy/ps2sdk.git
         cd ps2sdk
-        git checkout 7b2052735fccad687492cd7311bd9daeb8d329f0
+        git checkout 8ee69022ba81c977fe005f574d1fcfececbcb357
         make -j $(getconf _NPROCESSORS_ONLN) clean
         make -j $(getconf _NPROCESSORS_ONLN)
         make -j $(getconf _NPROCESSORS_ONLN) install
