--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -13,32 +13,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        docker_tag: [v1.0, v1.1, v1.2.0, latest]
-        flags: [
-          DUMMY_LIBC_INIT=1, 
-          DUMMY_TIMEZONE=1, 
-          KERNEL_NOPATCH=1, 
-          NEWLIB_NANO=1, 
-          KERNEL_NOPATCH=1 NEWLIB_NANO=1,
-          KERNEL_NOPATCH=1 NEWLIB_NANO=1 DUMMY_LIBC_INIT=1,
-          KERNEL_NOPATCH=1 NEWLIB_NANO=1 DUMMY_TIMEZONE=1,  
-          DEFAULT=1
-          ]
-
-    container: ps2dev/ps2dev:${{ matrix.docker_tag }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install dependencies
+    - name: Install Ubuntu packages
+      # if: matrix.os[0] == 'ubuntu-latest'
       run: |
-        apk add build-base
+        sudo apt-get update
+        sudo apt-get -y install curl make bash
     
+    - name: Download precompiled ps2dev toolchain from ps2dev/ps2dev
+      run: |
+        curl -sL https://github.com/ps2dev/ps2dev/releases/download/latest/ps2dev-ubuntu-latest.tar.gz | tar xvz -C ./
+
     - name: Compile project
       run: |
+        export PS2DEV=$PWD/ps2dev
+        export PS2SDK=$PS2DEV/ps2sdk
+        export GSKIT=$PS2DEV/gsKit
+        export PATH=$PATH:$PS2DEV/bin:$PS2DEV/ee/bin:$PS2DEV/iop/bin:$PS2DEV/dvp/bin:$PS2SDK/bin
+        
         make -j $(getconf _NPROCESSORS_ONLN) clean
-        make -j $(getconf _NPROCESSORS_ONLN) all ${{ matrix.flags }}
+        make -j $(getconf _NPROCESSORS_ONLN) all
 
     - name: Get short SHA
       id: slug
@@ -48,5 +44,5 @@ jobs:
       if: ${{ success() }}
       uses: actions/upload-artifact@v4
       with:
-        name: hello-${{ steps.slug.outputs.sha8 }}-${{matrix.docker_tag}}-${{ matrix.flags }}
+        name: hello-${{ steps.slug.outputs.sha8 }}
         path: hello.elf
