--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -12,19 +12,27 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    defaults:
+     run:
+      shell: msys2 {0}
+
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Ubuntu packages
-      # if: matrix.os[0] == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get -y install curl make bash
+    - name: Install MSYS2 packages
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW32
+        install: |
+          base-devel git make texinfo flex bison patch binutils mingw-w64-i686-gcc mpc-devel tar
+          autotools gettext gettext-devel
+          mingw-w64-i686-cmake mingw-w64-i686-make mingw-w64-i686-libogg
+        update: true
     
     - name: Download precompiled ps2dev toolchain from ps2dev/ps2dev
       run: |
-        curl -sL https://github.com/ps2dev/ps2dev/releases/download/latest/ps2dev-ubuntu-latest.tar.gz | tar xvz -C ./
+        curl -sL https://github.com/ps2dev/ps2dev/releases/download/latest/ps2dev-windows-latest.tar.gz | tar xvz -C ./
 
     - name: Compile project
       run: |
