--- a/.github/workflows/multiOSCompilation.yml
+++ b/.github/workflows/multiOSCompilation.yml
@@ -39,10 +39,10 @@ jobs:
         if: startsWith(matrix.os[0], 'macos')
         run: |
           brew update
-          brew install curl make bash
+          brew install curl make bash md5sha1sum
 
       - name: Install MSYS2 packages
-        if: matrix.os[0] == 'windows-latest'
+        if: matrix.os[0] == 'windows-latest'  
         uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW32
@@ -61,9 +61,9 @@ jobs:
           export GSKIT=$PS2DEV/gsKit
           export PATH=$PATH:$PS2DEV/bin:$PS2DEV/ee/bin:$PS2DEV/iop/bin:$PS2DEV/dvp/bin:$PS2SDK/bin
           
-          make -j $(getconf _NPROCESSORS_ONLN) clean
-          make -j $(getconf _NPROCESSORS_ONLN) all
-
+          ${PS2SDK}/bin/bin2c ${PS2SDK}/iop/irx/mcman.irx mcman_irx.c mcman_irx
+          md5sum mcman_irx.c
+      
       - name: Get short SHA
         id: slug
         run: echo "sha8=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_OUTPUT
@@ -72,5 +72,6 @@ jobs:
         if: ${{ success() }}
         uses: actions/upload-artifact@v4
         with:
-          name: hello-${{ steps.slug.outputs.sha8 }}-${{matrix.os[0]}}-${{matrix.os[1]}}
-          path: hello.elf
+          name: mcman_irx-${{ steps.slug.outputs.sha8 }}-${{matrix.os[0]}}-${{matrix.os[1]}}
+          path: mcman_irx.c
+  
