--- a/.github/workflows/multiOSCompilation.yml
+++ b/.github/workflows/multiOSCompilation.yml
@@ -43,14 +43,12 @@ jobs:
 
       - name: Install MSYS2 packages
         if: matrix.os[0] == 'windows-latest'  
-        #uses: msys2/setup-msys2@v2
-        #with:
-         # msystem: MINGW32
-          #install: |
-           # git make gcc
-          #update: true
-        run: |
-          pacman -S --noconfirm git make gcc
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MSYS2
+          install: |
+            git make gcc
+          update: true
 
       - name: Compile project
         run: |
