--- a/.github/workflows/multiOSCompilation.yml
+++ b/.github/workflows/multiOSCompilation.yml
@@ -45,7 +45,7 @@ jobs:
         if: matrix.os[0] == 'windows-latest'  
         uses: msys2/setup-msys2@v2
         with:
-          msystem: MSYS
+          msystem: MINGW32
           install: |
             git make gcc
           update: true
